Added server-side VRF parser

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -20,4 +20,5 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 @import 'main/main';
 @import '../components/footer/footer';
 @import '../components/modal/modal';
+@import '../components/upload/upload';
 /* endinject */
