--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -19,7 +19,9 @@
   color: #F5F5F5;
   text-align: center;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-  background: #4393B9;
+  background-image: url('../../assets/images/bn1.jpg');
+  background-size: cover;
+  background-color: #4393B9;
 }
 
 .navbar-text {
@@ -36,4 +38,8 @@
 
 .onit {
   margin: 0 1px 0;
+}
+
+button.btn + button.btn {
+  margin: 0 4px 0;
 }
