--- a/client/components/vrf/vrf-upload.html
+++ b/client/components/vrf/vrf-upload.html
@@ -11,7 +11,6 @@ Drop File: -->
 
     <h2 class="text-muted">Drop VRF, or click to upload</h2>
     <i class="fa fa-2x fa-plus text-muted"></i>
-
 </div>
 
 <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
@@ -20,10 +19,10 @@ Drop File: -->
 	<span class="pull-right" style="margin-top:6px;" ng-click="$ctrl.edit()">Submit manually</span>
 </a>
 
-<br><br><br>
-[debug] Files:
+
+<!-- [debug] Files:
 <ul>
     <li ng-repeat="f in files" style="font:smaller">{{f.name}} {{f.$error}} {{f.$errorParam}}</li>
 </ul>
 Upload Log:
-<pre>{{log}}</pre>
+<pre>{{log}}</pre> -->
