--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -18,6 +18,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 /* inject:scss */
 @import 'admin/admin';
 @import 'main/main';
+@import 'utilities/utilities';
 @import '../components/footer/footer';
 @import '../components/modal/modal';
 @import '../components/vrf/vrf-accordion';
