--- a/client/components/vrf/vrf-accordion.html
+++ b/client/components/vrf/vrf-accordion.html
@@ -18,7 +18,7 @@
           <!-- original file -->
           <div class="row">
             <div class="col-lg-12">
-              <a ng-if="vrf.fileUrl" href="{{vrf.fileUrl}}">
+              <a ng-if="vrf.fileUrl" href="{{vrf.fileUrl}}" target="_blank">
                 <div class="alert alert-info">
                   <strong>Original VRF</strong>
                   <pre class="pull-right" style="margin-top:-9px;">{{vrf.fileUrl}}</pre>
@@ -66,35 +66,40 @@
           <div class="row">
             <div class="col-lg-12">
               <h3>Description</h3>
-              <p>{{vrf.body}}</p>
+              <p class="col-lg-12 vrf-description" ng-bind-html="vrf.body | linebreak"></p>
             </div>
           </div>
           <!-- /VRF message body -->
           <hr>
-          <!-- notes and buttons -->
-          <div class="row">
-            <div class="col-lg-8">
-              <h3 style="margin: 0 0 20px;">Notes</h3>
-              <div ng-repeat="note in vrf.notes" class="media">
-                <div class="media-left">
-                  <img class="media-object pull-left" ng-src="/assets/images/team/{{note.author}}-th.jpg">
-                </div>
-                <div class="media-body">
-                  <h4 class="media-heading">
-                    {{note.author}}:
-                  </h4>
-                  <p>{{note.body}}</p>
-                </div>
-              </div>
-              <p ng-if="!vrf.notes.length" class="text-muted">No notes.</p>
-            </div>
-            <div class="col-lg-4">
+          <!-- buttons -->
+          <div class="row buttons">
+            <div class="col-lg-12">
               <button class="btn btn-danger pull-right" ng-click="$ctrl.delete(vrf)">Delete</button>
               <button ng-if="active" class="btn btn-success pull-right" ng-click="$ctrl.complete(vrf)">Mark Complete</button>
               <button ng-if="active" class="btn btn-default pull-right" ng-click="$ctrl.edit(vrf, false)">Edit VRF</button>
             </div>
           </div>
-          <!-- /notes and buttons -->
+          <!-- /buttons -->
+          <div class="row notes">
+            <div class="col-lg-12">
+              <h3 style="margin: 0 0 20px;">Notes</h3>
+              <div class="col-lg-12">
+                <div ng-repeat="note in vrf.notes" class="media">
+                  <div class="media-left">
+                    <img class="media-object pull-left" ng-src="/assets/images/team/{{note.author}}-th.jpg">
+                  </div>
+                  <div class="media-body">
+                    <h4 class="media-heading">
+                      {{note.author}}:
+                    </h4>
+                    <p>{{note.body}}</p>
+                  </div>
+                </div>
+                <p ng-if="!vrf.notes.length" class="text-muted">No notes.</p>
+              </div>
+            </div>
+          </div>
+          <!-- /notes -->
           <!-- submit new note -->
           <div ng-if="active" class="row" style="margin-top: 30px;">
             <div class="col-lg-12">
