--- a/client/components/vrf/vrf-upload.html
+++ b/client/components/vrf/vrf-upload.html
@@ -10,7 +10,7 @@ Drop File: -->
     ngf-pattern="'application/pdf'">
 
     <h2 class="text-muted">Drop VRF, or click to upload</h2>
-    <i class="fa fa-2x fa-plus text-muted"></i>
+    <i id="upload-spinner" class="fa fa-2x fa-plus text-muted"></i>
 </div>
 
 <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
