--- a/client/components/vrf/vrf-accordion.scss
+++ b/client/components/vrf/vrf-accordion.scss
@@ -1,3 +1,12 @@
+.filt {
+	padding: 0 15px 0;
+	margin-bottom: 20px;
+
+	button {
+		margin-right: 15px;
+	}
+}
+
 .media {
 	margin-top: 10px;
 	padding: 4px;
@@ -7,10 +16,11 @@
 
 .media-body {
 	padding-left: 10px;
-}
 
-.media-body p {
-	margin: 0;
+	p {
+		margin: 0;
+		margin-left: 10px;
+	}
 }
 
 img.media-object {
