--- a/client/components/vrf/vrf-upload.scss
+++ b/client/components/vrf/vrf-upload.scss
@@ -15,3 +15,29 @@
 .drop-box:hover * {
     color: #666;
 }
+
+.spinning {
+	-webkit-animation: spin 2s infinite ease;
+  	animation: spin 2s infinite ease;
+}
+
+@-webkit-keyframes spin {
+	0% {
+		-webkit-transform: rotate(0deg);
+	    transform: rotate(0deg);
+	}
+	100% {
+    	-webkit-transform: rotate(360deg);
+    	transform: rotate(360deg);
+	}
+}
+@keyframes spin {
+  	0% {
+    	-webkit-transform: rotate(0deg);
+    	transform: rotate(0deg);
+  	}
+  	100% {
+    	-webkit-transform: rotate(360deg);
+    	transform: rotate(360deg);
+  	}
+}
