improved file renamer, revamped var to let or const

--- a/client/app/utilities/utilities.scss
+++ b/client/app/utilities/utilities.scss
@@ -32,6 +32,16 @@
   text-align: center;
 }
 
-.renamer-log {
-  height: 390px;
+#renamer-log {
+  height: 415px;
+
+  .log-msg {
+    color: #046E91;
+  }
+  .log-scs {
+    color: #007000;
+  }
+  .log-err {
+    color: #B40000;
+  }
 }
