--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <p>Angular Fullstack v3.7.5 |
-    <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a>
+  <p>2KVID WebApp v{{version}} |
+    <a href="https://2k.com">2K Games</a>
   </p>
 </div>
